# matrix-filter

./: .gitignore  CMakeLists.txt  README.md
assets/: matrix_chars.txt
src/: camera_capture.cpp  camera_capture.h  config.h  consumer_detector.h  main.cpp  matrix_effect.cpp  matrix_effect.h  static_effect.cpp  static_effect.h  time_utils.h  virtual_output.cpp  virtual_output.h
